--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.2",
 		"postcss": "^8.4.38",
-		"prettier": "^3.1.1",
+		"prettier": "^3.3.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.2",
 		"sass": "^1.77.4",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
