--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"sass": "^1.77.4",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
+		"svelte-hamburgers": "^4.2.0",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
