--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host 0.0.0.0",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -13,27 +13,27 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.4",
-		"@sveltejs/kit": "^2.5.25",
+		"@sveltejs/kit": "^2.5.26",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.10",
-		"postcss": "^8.4.41",
+		"postcss": "^8.4.45",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.6",
-		"sass": "^1.77.8",
+		"sass": "^1.78.0",
 		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.8.6",
+		"svelte-check": "^4.0.1",
 		"svelte-hamburgers": "^4.2.1",
 		"tailwindcss": "^3.4.10",
 		"tslib": "^2.7.0",
 		"typescript": "^5.5.4",
-		"vite": "^5.4.2"
+		"vite": "^5.4.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@vercel/analytics": "^1.3.1",
-		"axios": "^1.7.5",
-		"swiper": "^11.1.11"
+		"axios": "^1.7.7",
+		"swiper": "^11.1.12"
 	}
 }
