--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"type": "module",
 	"dependencies": {
 		"@vercel/analytics": "^1.3.1",
+		"@vercel/blob": "^0.23.4",
 		"axios": "^1.7.7",
 		"swiper": "^11.1.12"
 	}
