--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/blob": "^0.23.4",
+		"@vercel/postgres": "^0.10.0",
 		"axios": "^1.7.7",
 		"swiper": "^11.1.12"
 	}
