--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.10",
+		"lucia": "^3.2.0",
 		"postcss": "^8.4.45",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
