--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/blob": "^0.23.4",
 		"@vercel/postgres": "^0.10.0",
