--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
+		"@node-rs/argon2": "^1.8.3",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/blob": "^0.23.4",
 		"@vercel/postgres": "^0.10.0",
