--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@vercel/blob": "^0.23.4",
 		"@vercel/postgres": "^0.10.0",
 		"@vercel/speed-insights": "^1.0.12",
+		"arctic": "^1.9.2",
 		"axios": "^1.7.7",
 		"drizzle-orm": "^0.33.0",
 		"swiper": "^11.1.12"
