--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 	"dependencies": {
 		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"@node-rs/argon2": "^1.8.3",
+		"@oslojs/crypto": "^1.0.1",
+		"@oslojs/encoding": "^1.1.0",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/blob": "^0.23.4",
 		"@vercel/postgres": "^0.10.0",
