--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+        "test": "vitest"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.4",
@@ -30,7 +31,8 @@
 		"tailwindcss": "^3.4.10",
 		"tslib": "^2.7.0",
 		"typescript": "^5.5.4",
-		"vite": "^5.4.3"
+		"vite": "^5.4.3",
+		"vitest": "^2.1.4"
 	},
 	"type": "module",
 	"dependencies": {
