--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,29 @@
+# macOS specific system files
 .DS_Store
+
+# Dependencies folder
 node_modules
+
+# Build output
 /build
 /.svelte-kit
 /package
+
+# Environment variable files
 .env
 .env.*
-!.env.example
+.env*.local
+
+# Temporary Vite files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-.vercel
-.env*.local
+
+# WebStorm specific folder
+.idea/
+/.idea
+
+# Backup images
 local
+
+# Vercel
+.vercel
