--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
 		"format": "prettier --write .",
-        "test": "vitest"
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.2.4",
 		"@sveltejs/adapter-vercel": "^5.4.3",
 		"@sveltejs/kit": "^2.6.4",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-		"autoprefixer": "^10.4.20",
-		"daisyui": "^4.12.10",
+		"@tailwindcss/postcss": "^4.0.0",
+		"daisyui": "^5.0.0-beta.2",
 		"drizzle-kit": "^0.26.2",
 		"postcss": "^8.4.45",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.6.6",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"sass": "^1.78.0",
 		"svelte": "^5.1.1",
 		"svelte-check": "^4.0.1",
 		"svelte-hamburgers": "^5.0.0",
-		"tailwindcss": "^3.4.10",
+		"tailwindcss": "^4.0.0",
 		"tslib": "^2.7.0",
 		"typescript": "^5.5.4",
 		"vite": "^5.4.3",
