Update dependencies to latest versions for stability and features
Upgraded various dev and runtime dependencies in `package.json` and `package-lock.json` to their latest versions. Changes improve compatibility, include bug fixes, and enhance performance. Updated `node` requirement for certain packages to `>=18`.

--- a/package.json
+++ b/package.json
@@ -13,39 +13,39 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.2.4",
-		"@sveltejs/adapter-vercel": "^5.4.3",
-		"@sveltejs/kit": "^2.6.4",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-vercel": "^5.5.3",
+		"@sveltejs/kit": "^2.16.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/postcss": "^4.0.0",
 		"daisyui": "^5.0.0-beta.2",
-		"drizzle-kit": "^0.26.2",
-		"postcss": "^8.4.45",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
+		"drizzle-kit": "^0.30.2",
+		"postcss": "^8.5.1",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"sass": "^1.78.0",
-		"svelte": "^5.1.1",
-		"svelte-check": "^4.0.1",
+		"sass": "^1.83.4",
+		"svelte": "^5.19.3",
+		"svelte-check": "^4.1.4",
 		"svelte-hamburgers": "^5.0.0",
 		"tailwindcss": "^4.0.0",
 		"tslib": "^2.7.0",
-		"typescript": "^5.5.4",
-		"vite": "^5.4.3",
-		"vitest": "^2.1.4"
+		"typescript": "^5.7.3",
+		"vite": "^6.0.11",
+		"vitest": "^3.0.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"@node-rs/argon2": "^2.0.0",
+		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
-		"@vercel/analytics": "^1.3.1",
-		"@vercel/blob": "^0.25.1",
+		"@vercel/analytics": "^1.4.1",
+		"@vercel/blob": "^0.27.1",
 		"@vercel/postgres": "^0.10.0",
 		"@vercel/speed-insights": "^1.0.12",
-		"arctic": "^2.0.1",
-		"axios": "^1.7.7",
-		"drizzle-orm": "^0.35.2",
-		"swiper": "^11.1.12"
+		"arctic": "^3.2.1",
+		"axios": "^1.7.9",
+		"drizzle-orm": "^0.38.4",
+		"swiper": "^11.2.1"
 	}
 }
